# aws-json-term-matcher

./: .gitignore  Makefile  README.md  filter.peg  filter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: publish.yml  test.yml
aws_json_term_matcher/: exceptions.py  grammar.lark  matcher.py  parser.py
tests/: test_matcher.py  test_parser.py
