[project]
name = "aws-json-term-matcher"
version = "0.1.2"
authors = [
    { name = 'Cristopher Pinzon', email = 'cristopher.pinzon@localstack.cloud' }
]
description = 'A Python library for advanced filtering and matching of AWS JSON logs, designed to simplify log parsing and enhance filtering capabilities.'
readme = { file ="README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

requires-python = ">=3.8"
dependencies=[
    "lark"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

test = [
    "pytest"
]


[project.urls]
Repository = "https://github.com/pinzon/aws-json-term-matcher.git"
