[metadata]
name = aws-json-term-matcher
version = 0.1.0
description='A parser for AWS log JSON term matching filters.',
url = https://github.com/pinzon/aws-logs-parser
author='Cristopher Pinzon',
author_email='cristopher.pinzon@localstack.cloud',
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
test_suite = tests
packages=find:
install_requires =
    lark>=1.2.2

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest>=8.3.3

test =
    pytest>=8.3.3

[options.package_data]
* = *.md
